--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -26,7 +26,7 @@
               data: {turbolinks: "false"} %>
           </li>
           <li>
-            <%= link_to t("admin.sidebar.addModel"), "#",
+            <%= link_to t("admin.sidebar.addModel"), new_admin_model_bus_path,
               data: {turbolinks: "false"} %>
           </li>
           <li>
