--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -25,5 +25,9 @@
       <%= yield %>
 
     </div>
+    <script type="text/javascript">
+      I18n.defaultLocale = "<%= I18n.default_locale %>";
+      I18n.locale = "<%= I18n.locale %>";
+    </script>
   </body>
 </html>
