--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -9,6 +9,8 @@
  // files in this directory. Styles in this file should be added after the last require_* statement.
  // It is generally better to create a new file per style scope.
  //
+ //= require ../booking
+ //= require ../model_bus
  //= require_self
  //= require font-awesome
  //= require bootstrap-select
