--- a/app/views/admin/buses/index.html.erb
+++ b/app/views/admin/buses/index.html.erb
@@ -4,6 +4,10 @@
     <div class="col-lg-12">
       <h1 class="page-header">
         <%= t "admin.bus.title" %>
+        <%= link_to new_admin_bus_path,
+          class: "btn btn-primary add-bus-btn" do %>
+          <%= content_tag :i, t("admin.schedule.add"), class: "fa fa-plus" %>
+        <% end %>
       </h1>
     </div>
   </div>
