--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -11,6 +11,7 @@
       "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "admin/application",
       "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   </head>
 
   <body>
