--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -11,7 +11,7 @@
       "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "admin/application",
       "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" %>
   </head>
 
   <body>
