admin update filter schedule

--- a/app/views/admin/schedules/index.html.erb
+++ b/app/views/admin/schedules/index.html.erb
@@ -11,9 +11,9 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="filter-part">
-        <%= select_tag :id, options_for_select(list_items(@support.roads)),
-          title: t("admin.schedule.filter_by_road"), class: "selectpicker",
-          multiple: true, id: "select-road" %>
+        <%= select_tag :id, options_for_select(list_items(@support.routes)),
+          title: t("admin.schedule.filter_by_routes"), class: "selectpicker",
+          multiple: true, id: "select-routes" %>
 
         <%= select_tag :id, options_for_select(list_items(@support.intervals)),
           title: t("admin.schedule.filter_by_interval"), class: "selectpicker",
