--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to t("app_name"), "#", class: "logo" %>
+    <%= link_to t("app_name"), root_url, class: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("home_page"), "#" %></li>
+        <li><%= link_to t("home_page"), root_path %></li>
         <li><%= link_to t("payment"), "#" %></li>
         <li><%= link_to t("guide"), "#" %></li>
         <li><%= link_to t("contact"), "#" %></li>
