--- a/app/views/admin/buses/_model_bus.html.erb
+++ b/app/views/admin/buses/_model_bus.html.erb
@@ -30,7 +30,7 @@
       <% end %>
     </div>
     <div class="row text-center">
-      <button type="button" name="button" class="btn btn-primary create-frame"
+      <button type="button" name="button" class="btn btn-primary create-frame-bus"
         data-model="<%= model_bus.id %>">
         <%= t "admin.bus.create_bus" %>
       </button>
