--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -9,7 +9,6 @@
               url: schedules_url do |f| %>
               <div class="row">
                 <div class="col-md-5 col-md-push-2">
-                  <%= f.label :origin_address, t("origin_address") %>
                   <div>
                     <%= f.select "origin_address",
                       options_from_collection_for_select(@addresses, "id", "city"),
@@ -17,11 +16,10 @@
                       {class: "select-custom", id: "origin_address"} %>
                   </div>
                 </div>
-                <div class="col-md-2">
-                  <i class="glyphicon glyphicon-transfer icon"></i>
+                <div class="col-md-3 text-center">
+                  <i class="glyphicon glyphicon-transfer icon" style="font-size:30px;"></i>
                 </div>
-                <div class="col-md-5">
-                  <%= f.label :destination, t("destination_address") %>
+                <div class="col-md-4">
                   <div>
                     <%= f.select "destination_address",
                       options_from_collection_for_select(@addresses, "id", "city"),
@@ -32,18 +30,16 @@
               </div>
               <div class="row">
                 <div class="col-md-5 col-md-push-2">
-                  <%= f.label :date, t("date_of_department") %>
-                    <label class="error" for="search_date" generate="true"
-                      style="display: block;"></label>
-                    <div class="input-group date search-schedule" data-provide="datepicker">
-                      <%= f.text_field "date", class: "form-control", id: "search_date"%>
-                      <div class="input-group-addon">
-                          <span class="glyphicon glyphicon-th"></span>
-                      </div>
+                  <label class="error" for="search_date" generate="true"
+                    style="display: block;"></label>
+                  <div class="input-group date search-schedule" data-provide="datepicker">
+                    <%= f.text_field "date", class: "form-control", id: "search_date"%>
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-th"></span>
                     </div>
+                  </div>
                 </div>
-                <div class="col-md-offset-2 col-md-5">
-                  <%= f.label :interval, t("interval") %>
+                <div class="col-md-offset-3 col-md-4">
                   <div>
                     <%= f.select "interval",
                       options_from_collection_for_select(@intervals, "id", "name"),
