--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -67,76 +67,32 @@
         <div class="clearfix"></div>
         <!-- Nav tabs -->
         <ul class="nav nav-tabs clearfix" role="tablist">
-          <li id="lisaigon" role="presentation" class="active"><a href="#saigon" aria-controls="home" role="tab" data-toggle="tab">SÀI GÒN</a></li>
-          <li id="lihanoi" role="presentation"><a href="#hanoi" aria-controls="profile" role="tab" data-toggle="tab">HÀ NỘI</a></li>
-          <li id="lidanang" role="presentation"><a href="#danang" aria-controls="messages" role="tab" data-toggle="tab">ĐÀ NẴNG</a></li>
-          <li id="linhatrang" role="presentation"><a href="#nhatrang" aria-controls="settings" role="tab" data-toggle="tab">NHA TRANG</a></li>
-          <li id="licantho" role="presentation"><a href="#cantho" aria-controls="settings" role="tab" data-toggle="tab">CẦN THƠ</a></li>
+          <% @addresses.each_with_index do |ad, index|%>
+          <li role="presentation" class="<%= index == 0 ? 'active' : '' %>">
+            <%= link_to ad.city, "#tab-#{ad.id}", data: {toggle: "tab"} %>
+          </li>
+        <% end %>
         </ul>
         <!-- Tab panes -->
         <div class="tab-content">
-          <div role="tabpanel" class="tab-pane fade in active" id="saigon">
-            <div class="clearfix">
-              <div class="col-md-6 pl0 pr0">
-                <ul class="routes-list">
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-ha-noi-129t1241.html"><span class="route fl"><small>Sài Gòn →</small> Hà Nội</span></a>
-                    <span class="price fl">900.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-ha-noi" data-param="129t1241.html" id="dp1542629616597"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-da-lat-lam-dong-129t23991.html"><span class="route fl"><small>Sài Gòn →</small> Đà Lạt</span></a>
-                    <span class="price fl">150.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-da-lat-lam-dong" data-param="129t23991.html" id="dp1542629616598"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-nha-trang-khanh-hoa-129t23591.html"><span class="route fl"><small>Sài Gòn →</small> Nha Trang</span></a>
-                    <span class="price fl">180.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-nha-trang-khanh-hoa" data-param="129t23591.html" id="dp1542629616599"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-da-nang-129t1151.html"><span class="route fl"><small>Sài Gòn →</small> Đà Nẵng</span></a>
-                    <span class="price fl">360.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-da-nang" data-param="129t1151.html" id="dp1542629616600"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-phnom-penh-campuchia-129t1491181.html"><span class="route fl"><small>Sài Gòn →</small> Phnôm Pênh</span></a>
-                    <span class="price fl">200.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-phnom-penh-campuchia" data-param="129t1491181.html" id="dp1542629616601"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-6 pl0 pr0">
-                <ul class="routes-list">
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-mui-ne-binh-thuan-129t27071.html"><span class="route fl"><small>Sài Gòn →</small> Mũi Né</span></a>
-                    <span class="price fl">120.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-mui-ne-binh-thuan" data-param="129t27071.html" id="dp1542629616602"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-vung-tau-ba-ria-vung-tau-129t2131.html"><span class="route fl"><small>Sài Gòn →</small> Vũng Tàu</span></a>
-                    <span class="price fl">105.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-vung-tau-ba-ria-vung-tau" data-param="129t2131.html" id="dp1542629616603"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-khanh-hoa-129t1321.html"><span class="route fl"><small>Sài Gòn →</small> Khánh Hòa</span></a>
-                    <span class="price fl">185.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-khanh-hoa" data-param="129t1321.html" id="dp1542629616604"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-dak-lak-129t1161.html"><span class="route fl"><small>Sài Gòn →</small> Buôn Ma Thuột</span></a>
-                    <span class="price fl">200.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-dak-lak" data-param="129t1161.html" id="dp1542629616605"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                  <li>
-                    <a href="/vi-VN/ve-xe-khach-tu-sai-gon-di-rach-gia-kien-giang-129t23741.html"><span class="route fl"><small>Sài Gòn →</small> Rạch Giá - Kiên Giang</span></a>
-                    <span class="price fl">120.000 ₫/vé</span>
-                    <input class="input-txt selectDate hasDatepicker" type="hidden" data-url="/vi-VN/ve-xe-khach-tu-sai-gon-di-rach-gia-kien-giang" data-param="129t23741.html" id="dp1542629616606"><button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
-                  </li>
-                </ul>
+          <% @addresses.each_with_index do |ad, index| %>
+            <div role="tabpanel" class="tab-pane fade in <%= index == 0 ? 'active' : '' %> " id="<%= "tab-#{ad.id}" %>">
+              <div class="clearfix">
+                <div class="col-md-12 pl0 pr0">
+                  <ul class="routes-list">
+                    <% ad.routes_start.includes(:origin, :destination).each do |r| %>
+                      <li>
+                        <%= link_to "#" do %>
+                          <span class="route fl"><small><%= r.origin.city %> →</small> <%= r.destination.city %></span>
+                          <button type="button" class="ui-datepicker-trigger">Chọn ngày</button>
+                        <% end %>
+                      </li>
+                    <% end %>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
+          <% end %>
         </div>
       </div>
     </div>
