--- a/app/views/admin/buses/index.html.erb
+++ b/app/views/admin/buses/index.html.erb
@@ -27,6 +27,9 @@
       <tbody class="schedule-table">
         <%= render @buses %>
       </tbody>
+      <div class="text-center">
+        <%= paginate @buses, theme: "twitter-bootstrap-3" %>
+      </div>
     </table>
   </div>
 </div>
