--- a/app/views/admin/model_buses/index.html.erb
+++ b/app/views/admin/model_buses/index.html.erb
@@ -25,5 +25,8 @@
         <%= render @model_buses %>
       </tbody>
     </table>
+    <div class="text-center">
+      <%= paginate @model_buses, theme: "twitter-bootstrap-3" %>
+    </div>
   </div>
 </div>
