--- a/app/views/admin/schedules/index.html.erb
+++ b/app/views/admin/schedules/index.html.erb
@@ -46,5 +46,8 @@
         <%= render @support.schedules %>
       </tbody>
     </table>
+    <div class="text-center">
+      <%= paginate @support.schedules, theme: "twitter-bootstrap-3" %>
+    </div>
   </div>
 </div>
