--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,25 +1,15 @@
-<% if controller_name != "sessions" %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end %>
-
-<% if devise_mapping.registerable? && controller_name != "registrations" %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end %>
-
-<% if devise_mapping.recoverable? && controller_name != "passwords" && controller_name != "registrations" %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-<% end %>
-
-<% if devise_mapping.confirmable? && controller_name != "confirmations" %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
-<% end %>
-
-<% if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != "unlocks" %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
-<% end %>
-
-<% if devise_mapping.omniauthable? %>
-  <% resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end %>
-<% end %>
+ <ul class="login-more p-t-190">
+   <% if controller_name != "sessions" %>
+     <li class="m-b-8">
+       <%= link_to t("log_in"), new_session_path(resource_name) %>
+       <br/>
+     </li>
+   <% end %>
+ 
+    <% if devise_mapping.registerable? && controller_name != "registrations" %>
+     <li class="m-b-8">
+       <%= link_to t("sign_up"), new_registration_path(resource_name), class: "txt2" %>
+       <br/>
+     </li>
+   <% end %>
+ </ul>
