--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
       "data-turbolinks-track": "reload" %>
   </head>
   <body>
-    <%= render "layouts/header" %>
+    <% unless request.url.include?('sign_in') || request.url.include?('sign_up') %>
+      <%= render "layouts/header" %>
+    <% end %>
     <%= yield %>
     </div>
     <script type="text/javascript">
