--- a/app/assets/stylesheets/log_in.css
+++ b/app/assets/stylesheets/log_in.css
@@ -100,7 +100,7 @@ textarea:-ms-input-placeholder { color: #adadad;}
 
  .txt2 {
   font-size: 15px;
-  color: #57b846;
+  color: #337ab7;
   line-height: 1.5;
 }
 
@@ -119,7 +119,7 @@ textarea:-ms-input-placeholder { color: #adadad;}
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  /*align-items: center;*/
   padding: 15px;
   background: #fff;
 }
@@ -135,7 +135,7 @@ textarea:-ms-input-placeholder { color: #adadad;}
 
  .login100-form-title {
   display: block;
-  font-size: 39px;
+  font-size: 26px;
   color: #333333;
   line-height: 1.2;
   text-align: center;
@@ -263,7 +263,7 @@ textarea:-ms-input-placeholder { color: #adadad;}
   padding: 0 20px;
   width: 100%;
   height: 50px;
-  background-color: #57b846;
+  background-color: #1867aa;
   border-radius: 25px;
 
    box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
@@ -279,7 +279,7 @@ textarea:-ms-input-placeholder { color: #adadad;}
 }
 
  .login100-form-btn:hover  {
-  background-color: #333333;
+  background-color: #1867aa;
   box-shadow: 0 10px 30px 0px rgba(51, 51, 51, 0.5);
   -moz-box-shadow: 0 10px 30px 0px rgba(51, 51, 51, 0.5);
   -webkit-box-shadow: 0 10px 30px 0px rgba(51, 51, 51, 0.5);
@@ -380,6 +380,6 @@ textarea:-ms-input-placeholder { color: #adadad;}
 .p-b-70 {padding-bottom: 15px;}
 .m-t-85 {margin-top: 40px;}
 
-.m-b-8 {margin-bottom: 8px;}
+.m-b-8 {margin-bottom: 8px;justify-content: center;}
 .m-b-35 {margin-bottom: 35px;}
 .m-b-50 {margin-bottom: 50px;}
