--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,9 +6,9 @@
  				<span class="login100-form-title p-b-70">
  					<%= t "sign_up" %>
  				</span>
- 				<span class="login100-form-avatar">
+ 				<!-- <span class="login100-form-avatar">
  					<%= image_tag("avatar-01.jpg", alt: "AVATAR") %>
- 				</span>
+ 				</span> -->
  
   				<div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate = "<%= t "enter_username" %>" >
  					<%= f.email_field :email, autocomplete: "email", class: "input100" %>
