--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <div>
-          <h1>VeXeRe.com Hệ thống vé xe lớn nhất Việt Nam</h1>
+          <h1>DatVeXe.com Hệ thống vé xe lớn nhất Việt Nam</h1>
           <% if @addresses %>
             <%= form_for :search, method: "get", html: {id: "search_form"},
               url: schedules_url do |f| %>
