--- a/app/views/user_mailer/billing.html.erb
+++ b/app/views/user_mailer/billing.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t "bill_mailer.greeting" %> <%= @user.email %></h1>
 
-<p><h3>Quý khách vui lòng thanh toán <%= @bill.total_price %> trước <%= (Time.now + 45.minutes).strftime("%I:%M") %> ngày <%= (Time.now + 45.minutes).strftime("%d/%m/%Y") %> vào tài khoản 04510003954xxxxxxx Công ty TNHH VeXeRe Vietcombank CN Ha Dong. Nội dung chuyển khoản: <%= @user.email %> VXR_0989.<br>
+<p><h3>Quý khách vui lòng thanh toán <%= @bill.total_price %> trước <%= (Time.now + 45.minutes).strftime("%I:%M") %> ngày <%= (Time.now + 45.minutes).strftime("%d/%m/%Y") %> vào tài khoản 04510003954xxxxxxx Công ty TNHH DatVeXe Vietcombank CN Ha Dong. Nội dung chuyển khoản: <%= @user.email %> VXR_0989.<br>
 Hotline: 19001723.</h3></p>
 
