--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -15,8 +15,8 @@
               schedule.time_spent*60).strftime(t("time.formats.time_hour")) %></span>
           </div>
           <div class="dask-line"></div>
-          <p class="route"><%= t "take-hour" %> <%= schedule.time_spent/60 %>
-            <% t "hour" %></p>
+          <p class="route"><%= t "take-hour" %> <%= schedule.time_spent %>
+            p</p>
         </div>
       </div>
     </div>
